re PR tree-optimization/17474 (Compiling at -01 yields different results)

PR tree-optimization/17474
	* tree-ssa-ccp.c (maybe_fold_offset_to_component_ref): Determine
	offset of the field correctly when DECL_FIELD_BIT_OFFSET != 0.

From-SVN: r88095